# Cepa

./: .gitignore  AGENTS.md  Justfile  README.md  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: accounting.md  compression.md  performance.md
docs/performance-results/: 2026-07-11-m4-pro-arena.csv  2026-07-11-m4-pro-basename.csv  2026-07-11-m4-pro-cancellation.csv  2026-07-11-m4-pro-hardlink-ownership.csv  2026-07-11-m4-pro-memory.csv  2026-07-11-m4-pro-native-comparison.csv  2026-07-11-m4-pro-real-tree.csv  2026-07-11-m4-pro.csv
performance-results/: 2026-07-11-linux-container-statx-cancellation.json  2026-07-11-linux-container-statx-parity.json
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: generate_scan_fixture.rs  scan_benchmark.rs  scan_cancellation.rs  scan_parity.rs
src-tauri/src/: compression.rs  lib.rs  main.rs  scanner.rs
src-tauri/src/compression/: estimator.rs
src-tauri/src/scanner/: linux.rs  macos.rs
src/lib/: dev-mock.ts  scanner.test.ts  scanner.ts  sunburst.test.ts  sunburst.ts
src/lib/components/ui/card/: card-footer.svelte  card-header.svelte  card.svelte
