[package]
name = "cepa"
version = "0.1.0"
description = "A fast, cross-platform disk space analyzer"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cepa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
crossbeam-channel = "0.5"
miniz_oxide = "0.8.9"

[target.'cfg(target_os = "linux")'.dependencies]
zstd = { version = "0.13.3", default-features = false }

[target.'cfg(windows)'.dependencies]
lznt1 = "0.1.3"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_System_SystemServices",
] }

[dev-dependencies]
tempfile = "3.27.0"
